[gd_scene load_steps=2 format=3 uid="uid://main_menu_scene"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.03, 0.02, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Epoch Settlements"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Alpha"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Game"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Load Game"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Multiplayer"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="MultiplayerPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBox" type="VBoxContainer" parent="MultiplayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MultiplayerPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Multiplayer"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="MultiplayerPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Host Server"

[node name="IPLabel" type="Label" parent="MultiplayerPanel/VBox"]
layout_mode = 2
text = "Server IP:"

[node name="IPInput" type="LineEdit" parent="MultiplayerPanel/VBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="MultiplayerPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Join Server"

[node name="BackButton" type="Button" parent="MultiplayerPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="LangLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "Language:"

[node name="LangOption" type="OptionButton" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="SensLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "Mouse Sensitivity:"

[node name="SensSlider" type="HSlider" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 0.01
max_value = 0.15
step = 0.005
value = 0.06

[node name="SensValue" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "0.06"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back"

[node name="SavesPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="VBox" type="VBoxContainer" parent="SavesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="SavesPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Сохранения"
horizontal_alignment = 1

[node name="SlotContainer" type="VBoxContainer" parent="SavesPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="SavesPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Назад"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MultiplayerPanel/VBox/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerPanel/VBox/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MultiplayerPanel/VBox/BackButton" to="." method="_on_mp_back_pressed"]
[connection signal="pressed" from="SettingsPanel/VBox/BackButton" to="." method="_on_settings_back_pressed"]
[connection signal="pressed" from="SavesPanel/VBox/BackButton" to="." method="_on_saves_back_pressed"]
